Attempt to fix keyboard distortion

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -26,7 +26,7 @@
 .full-page {
   width: 100vw;
   height: 100vh;
-  position: fixed;
+  position: relative;
   overflow: hidden;
 }
 
